package com.minacontrol.empleado.enums;

public enum EstadoEmpleado {
    ACTIVO,
    INACTIVO
}
